<resources>
    <string name="app_name">HabitTrackerApp</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_delete_all">Delete All Habits</string>
    <string name="task_content">Habit Detail</string>
    <string name="habit_name">Habit…</string>
    <string name="due_date">Due Date (MM/DD/YYYY)</string>
    <string name="empty_not_saved">Habit not saved because it is empty.</string>
    <string name="task_complete">Habit Completed</string>
    <string name="habit_tracker">Habit Tracker</string>
    <string name="share">Share</string>
    <string name="create_new_habit">Create/Edit Habit</string>
    <string name="set_reminder_optional">Set Reminder Time (Optional)</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="habit_tracker_application">Habit Tracker Application</string>
    <string name="cancel">Cancel</string>
    <string name="calendar_view">Calendar View</string>
    <string name="delete">Delete</string>
</resources>