<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--Toolbar for ToDoList-->
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_purple"
        android:elevation="8dp"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_toolbar_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ToDoList"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>


    <!-- Task Name Input -->
    <EditText
        android:id="@+id/edit_task"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="70dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/task_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="@android:color/darker_gray" />

    <!-- Completed Task Checkbox-->
    <CheckBox
        android:id="@+id/task_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginVertical="65dp"
        android:text="@string/task_complete"
        android:layout_marginTop="16dp"
        android:checked="false"/>


    <!-- Task Content Input -->
    <EditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginVertical="120dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/task_content"
        android:inputType="textMultiLine"
        android:maxLines="20"
        android:minLines="1"
        android:padding="10dp"
        android:textColorHint="@android:color/darker_gray" />

    <!-- Due Date Input -->
    <EditText
        android:id="@+id/edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="540dp"
        android:layout_marginStart="10dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/due_date"
        android:padding="10dp"
        android:textColorHint="@android:color/darker_gray" />

    <!-- Save Button -->
    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="290dp"
        android:layout_marginVertical="540dp"
        android:text="@string/button_save"
        android:layout_marginTop="16dp" />

    <!-- Delete button -->
    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginVertical="600dp"
        android:text="@string/button_delete" />

    <!---->
    <Button
        android:id="@+id/task_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17.5dp"
        android:layout_marginVertical="65dp"
        android:text="@string/share"
        android:layout_marginTop="16dp"
        android:checked="false"/>

    <!--    &lt;!&ndash; Delete All button &ndash;&gt;-->
    <!--    <Button-->
    <!--        android:id="@+id/button_delete_all"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/button_delete_all"-->
    <!--        android:layout_marginTop="16dp" />-->

</RelativeLayout>
